examples/test/testpolicy19929.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19929
  namespace: namespace391
spec:
  podSelector:
    matchLabels:
      key4: value32
      key5: value22
      key39: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value45
      podSelector:
        matchLabels:
          key13: value10
          key12: value11
